5.3.3 (04-09-2019)
- Fix: In First Time First Year include exception args in order to print error message correctly formatted

5.3.2 (24-08-2019)
- Fix: added missing label on shifts enrolment proccess  ( #UL-FBA-737 )

5.3.1 (23-08-2019)
- Improvement: added new fields to Moodle Exporter ( #UL-FF-1711 )

5.3.0 (07-08-2019)
- Refactor: Support for logs in automatic debt generation execution
- Bug fix: Prevent creation of checksum in link to access debt account from registration details page
- Improvement: In 1A1V form for edition of address, present district subdivision dropdown if country is selected and is default country. Or else is simple text field.

5.2.0 (01-08-2019)
- Improvement: added season information to enrolments sheet on registration history report ( #UL-ISA-863 )
- Refactor: Removed code related to PersonUL <-> SecondNationality

5.1.0 (31-07-2019)
- Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)

5.0.0 (29-07-2019)
- Refactor: Changes in 1A1V student registration to accomodate fiscal address edition. Also improve addresses edition.
- Refactor: Remove fiscal information from personal data edition. Fiscal information edition is in own page.

4.2.0 (25-07-2019)
- Refactor: Curriculum aggregators now must have an explicit version for each semester
- Refactor: Replaced usages of ExecutionSemester by ExecutionInterval   

4.1.0 (23-07-2019)
- Refactor: Migrated second nationality to Person
- Refactor: Update dependencies

4.0.7 (08-07-2019)
- Bug Fix: added missing label
- Improvement: Added new column at registration history report: Enrolment Years Including Precedent Registrations (#UL-FA-473)

4.0.6 (03-07-2019)
- Refactor: moved registration history report services to academic-extensions

4.0.5 (27-06-2019)
- Refactor: moved RegistrationDataBean to academic-extensions

4.0.4 (27-06-2019)